# quotes_website_django

./: .gitignore  pyproject.toml
quotes/: import_data.py  manage.py
quotes/quotes/: settings.py  urls.py
quotes/quotesapp/: admin.py  forms.py  models.py  urls.py  views.py
quotes/quotesapp/migrations/: 0001_initial.py
quotes/quotesapp/templates/quotesapp/: add_author.html  add_quote.html  author_detail.html  authors.html  base.html  change_password.html  index.html  login.html  signup.html
