[tool.poetry]
package-mode = false
name = "quotes_website_django"
version = "0.1.0"
description = ""
authors = ["Nik Kor <3357381Nk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1"
psycopg2 = "^2.9.9"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
